--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap w/ Vite</title>
+    <title>Creative Stitches</title>
     <script type="module" src="./js/main.js"></script>
   </head>
   <body>
@@ -15,6 +15,8 @@
       <a href="./page2/index.html">Page 2</a>
       <br>
       <a href="./orderForm/index.html">Order Form</a>
+      <br>
+      <a href="./designForm/index.html">Design Form</a>
     </div>
   </body>
 </html>
