--- a/frontend/src/orderForm/index.html
+++ b/frontend/src/orderForm/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap w/ Vite</title>
+    <title>Creative Stitches</title>
     <script type="module" src="./js/order.js"></script>
   </head>
   <body>
