--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,10 +10,10 @@
 
 <body>
   <div class="container-fluid">
-    <div class="row align-items-start">
+    <div class="row d-flex justify-content-evenly">
       <!-- Sidebar -->
-      <div class="col-xxl-1 col-3 d-flex flex-column min-vh-100 sidebar">
-        <span class="fs-4 pt-2 text-center">Sidebar</span>
+      <div class="col-xxl-2 col-3 d-flex flex-column min-vh-100 sidebar">
+        <span class="fs-4 pt-2 text-center">Creative Stitches</span>
         <hr>
         <ul class="nav nav-pills flex-column">
           <li class="nav-item">Orders</li>
@@ -24,80 +24,94 @@
           <li class="nav-item">Financials</li>
         </ul>
       </div> <!-- Sidebar End -->
-
-      <!-- Order Form Start -->
-      <div class="col-xxl-11 col-9">
-        <div class="progress mt-5" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
-          aria-valuemin="0" aria-valuemax="100">
-          <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
-        </div>
-        <form action="/orderSubmit" method="post">
-          <div class="d-flex flex-column justify-content-center align-items-center mt-5">
-            <h1 class="display-4">Order Form</h1>
-            <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 ">
-              <hr class="border border-primary border-3 opacity-75">
-              <label class="form-label" for="orderDescription">Order ID</label>
-              <input class="form-control border border-dark" type="text" name="orderID" id="orderID"
-                placeholder="example: CHS Sports Team 2023">
-            </div>
-
-            <div class="col-xl-5 col-lg-6 col-md-8 col-11">
-              <div class="row">
-                <div class="col-md-6 col-12 mb-3">
-                  <label class="form-label" for="firstName">First Name</label>
-                  <input class="form-control border border-dark" type="text" name="firstName" id="firstName">
-                </div>
-                <div class="col-md-6 col-12 mb-3">
-                  <label class="form-label" for="lastName">Last Name</label>
-                  <input class="form-control border border-dark" type="text" name="lastName" id="lastName">
-                </div>
-              </div>
-            </div>
-
-            <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 ">
-              <label class="form-label" for="organization">Organization</label>
-              <input class="form-control border border-dark" type="text" name="organization" id="organization"
-                placeholder="example: Claxton High School">
-            </div>
-
-            <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 ">
-              <label class="form-label" for="email">Email</label>
-              <input class="form-control border border-dark" type="email" name="email" id="email"
-                placeholder="coach.sport@chs.com">
-            </div>
-
-            <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 ">
-              <label class="form-label" for="phone">Phone</label>
-              <input class="form-control border border-dark" type="tel" name="phone" id="phone"
-                placeholder="(987)654-3210">
-            </div>
-
-            <div class="col-xl-5 col-lg-6 col-md-8 col-11">
-              <div class="row">
-                <div class="col-md-5 col-12 mb-3">
-                  <label class="form-label" for="dueDate">Due Date</label>
-                  <input class="form-control border border-dark" type="date" name="dueDate" id="dueDate">
-                </div>
-                <div class="col-md-7 col-12 mb-3">
-                  <label class="form-label" for="taxExemption">Tax-Exemption</label>
-                  <input class="form-control border border-dark" type="text" name="taxExemption" id="taxExemption">
-                </div>
-              </div>
-            </div>
-
-            <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3">
-              <div class="d-flex flex-row-reverse">
-                <div class="col-md-3 col-6 ps-2">
-                  <input class="form-control btn btn-primary" type="submit" value="Submit">
-                </div>
-                <div class="col-md-3 col-6 pe-2">
-                  <button class="form-control btn btn-outline-secondary" type="reset">Reset</button>
-                </div>
+      <!-- Current Orders -->
+      <div class="col-xxl-10 col-9 mt-3">
+        <div class="display-4 text-center">Current Orders</div>
+        <div class="row d-flex justify-content-evenly">
+          <div class="col-md-3 col-10 m-3">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Evans County Hunting Club</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Organization</h6>
+                <hr>
+                <ul class="list-group">
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                    A list item
+                    <span class="badge bg-primary rounded-pill">14</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                    A second list item
+                    <span class="badge bg-primary rounded-pill">2</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                    A third list item
+                    <span class="badge bg-primary rounded-pill">1</span>
+                  </li>
+                </ul>
+                <hr>
+                <img
+                  src="https://images-platform.99static.com//AHx9pSSz3qU9lO0i6jWGpapjncY=/36x43:962x969/fit-in/590x590/99designs-contests-attachments/124/124322/attachment_124322331"
+                  class="card-img-bottom" alt="..." style="max-height: 240px;">
               </div>
             </div>
           </div>
-        </form>
-      </div> <!-- Order Form End -->
+          <div class="col-md-3 col-10 m-3">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Evans County Hunting Club</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Organization</h6>
+                <hr>
+                <ul class="list-group">
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                    A list item
+                    <span class="badge bg-primary rounded-pill">14</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                    A second list item
+                    <span class="badge bg-primary rounded-pill">2</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                    A third list item
+                    <span class="badge bg-primary rounded-pill">1</span>
+                  </li>
+                </ul>
+                <hr>
+                <img
+                  src="https://previews.123rf.com/images/ednal/ednal1905/ednal190500041/123983885-hunting-logo-hunt-badge-or-emblem-for-hunting-club-or-sport-deer-hunting-stamp.jpg"
+                  class="card-img-bottom" alt="..." style="max-height: 240px;">
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-10 m-3">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Evans County Hunting Club</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">Organization</h6>
+                <hr>
+                <ul class="list-group">
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                    A list item
+                    <span class="badge bg-primary rounded-pill">14</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                    A second list item
+                    <span class="badge bg-primary rounded-pill">2</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                    A third list item
+                    <span class="badge bg-primary rounded-pill">1</span>
+                  </li>
+                </ul>
+                <hr>
+                <img
+                  src="https://previews.123rf.com/images/ednal/ednal1905/ednal190500041/123983885-hunting-logo-hunt-badge-or-emblem-for-hunting-club-or-sport-deer-hunting-stamp.jpg"
+                  class="card-img-bottom" alt="..." style="max-height: 240px;">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </body>
