Update sizing options and Garment selection buttons

--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -154,15 +154,15 @@
                 <div class="col-sm-1">
                   <select class="form-inline border border-dark" id="size" name="size">
                     <option disabled selected value> -- select an option -- </option>
-                    <option value="XXS">XS</option>
+                    <option value="XXS">XXS</option>
                     <option value="XS">XS</option>
                     <option value="S">S</option>
                     <option value="M">M</option>
                     <option value="L">L</option>
                     <option value="XL">XL</option>
-                    <option value="2XL">XL</option>
-                    <option value="3XL">XL</option>
-                    <option value="4XL">XL</option>
+                    <option value="2XL">2XL</option>
+                    <option value="3XL">3XL</option>
+                    <option value="4XL">4XL</option>
                   </select>
                 </div>
               </div>
@@ -208,11 +208,13 @@
               </div>
             </div>
           </div>
-          <div class="card-footer">
-            <div class="row">
-              <button class="form-control btn btn-primary" id="previousGarment" type="button">Previous</button>
-              <button class="form-control btn btn-primary" id="nextGarment" type="button">Next</button>
-            </div>
+          <div class="card-footer text-center">
+            <button class="btn btn-primary btn-sm float-left" id="previousGarment" style="color:white" type="button">
+              Previous
+            </button>
+            <button class="btn btn-primary btn-sm float-right" id="nextGarment" style="color:white" type="button">
+              Next
+            </button>
           </div>
         </div>
       </div>
