Garment or Other selection fixes;

--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -47,7 +47,7 @@
         <img src="https://i.stack.imgur.com/H0xdb.png" class="d-block w-100" alt="...">
       </div>
 
-      <div id="show_other">
+      <div id="showOther">
         <div id="carouselExampleIndicators" class="carousel slide">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -126,7 +126,7 @@
         </div>
       </div>
 
-      <div id="show_garment">
+      <div id="showGarment">
         <div class="card">
           <div class="card-header">
             <h5 class="card-title text-center">Garment 1</h5>
@@ -150,9 +150,9 @@
             <!-- Select Size for Garment -->
             <div class="col-xl-12 col-lg-6 col-md-8 col-11">
               <div class="row justify-content-between">
-                <label class="form-label col-sm-7" for="size">Size: </label>
+                <label class="form-label col-sm-7" for="garmentSize">Size: </label>
                 <div class="col-sm-1">
-                  <select class="form-inline border border-dark" id="size" name="size">
+                  <select class="form-inline border border-dark" id="garmentSize" name="garmentSize">
                     <option disabled selected value> -- select an option -- </option>
                     <option value="XXS">XXS</option>
                     <option value="XS">XS</option>
