--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,24 +9,63 @@
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="row d-flex justify-content-evenly">
-      <!-- Sidebar -->
-      <div class="col-xxl-2 col-3 d-flex flex-column min-vh-100 sidebar">
-        <span class="fs-4 pt-2 text-center">Creative Stitches</span>
-        <hr>
-        <ul class="nav nav-pills flex-column">
-          <li class="nav-item">Orders</li>
-          <li class="nav-item">Designs</li>
-          <li class="nav-item">Calendars</li>
-          <li class="nav-item">Database</li>
-          <li class="nav-item">Inventory</li>
-          <li class="nav-item">Financials</li>
-        </ul>
-      </div> <!-- Sidebar End -->
-      <!-- Current Orders -->
+  <nav class="navbar bg-light fixed-top py-3">
+    <div class="container-fluid">
+      <a class="navbar-toggler btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+        aria-controls="offcanvasNavbar" aria-label="Toggle navigation" role="button">
+        <span class="navbar-toggler-icon"></span>
+      </a>
+      <a class="navbar-brand justify-content-center" href="#"><img src="assets/logoipsum-297.svg"></a>
+      <ul class="nav nav-tabs nav-fill">
+        <li class="nav-item">
+          <a class="nav-link active" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/order">Order</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/">Sales</a>
+        </li>
+      </ul>
+      <div class="offcanvas offcanvas-start" tabindex="0" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Orders</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Designs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Calendars</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Database</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Inventory</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Financials</a>
+            </li>
+          </ul>
+          <form class="d-flex mt-3" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container-fluid" id="currentOrders">
+    <div class="d-flex justify-content-evenly">
       <div class="col-xxl-10 col-9 mt-3">
-        <div class="display-4 text-center">Current Orders</div>
+        <div class="display-6 text-center">Current Orders</div>
         <div class="row d-flex justify-content-evenly">
           <div class="col-md-3 col-10 m-3">
             <div class="card">
@@ -111,9 +150,9 @@
           </div>
         </div>
       </div>
-
     </div>
   </div>
+
 </body>
 
 </html>
