--- a/frontend/src/orderForm/index.html
+++ b/frontend/src/orderForm/index.html
@@ -91,7 +91,9 @@
                   <input class="form-control btn btn-primary" type="submit" value="Submit">
                 </div>
                 <div class="col-md-3 col-6 pe-2">
-                  <button class="form-control btn btn-outline-secondary" id="submitButton" type="reset">Reset</button>
+                  <button class="form-control btn btn-outline-secondary" id="submitButton" type="button">
+                    GetOrder
+                  </button>
                 </div>
               </div>
             </div>
