--- a/frontend/src/orderForm/index.html
+++ b/frontend/src/orderForm/index.html
@@ -75,8 +75,9 @@
             <div class="col-xl-5 col-lg-6 col-md-8 col-11">
               <div class="row">
                 <div class="col-md-5 col-12 mb-3">
-                  <label class="form-label" for="dueDate">Due Date</label>
-                  <input class="form-control border border-dark" type="date" name="dueDate" id="dueDate">
+                  <label class="form-label" for="requestedDeliveryDate">Due Date</label>
+                  <input class="form-control border border-dark" type="date" name="requestedDeliveryDate"
+                    id="requestedDeliveryDate">
                 </div>
                 <div class="col-md-7 col-12 mb-3">
                   <label class="form-label" for="taxExemption">Tax-Exemption</label>
