Implement null check for orderID

--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -345,9 +345,11 @@
             </div>
           </div>
           <div class="col-xl-2 col-lg-2 col-md-2 col-2 mb-2">
-            <img id="nextGarment"
-              src="https://www.pngfind.com/pngs/m/37-379385_open-arrow-right-icon-png-transparent-png.png"
-              style='height: 100%; width: 100%; object-fit: fill' alt="...">
+            <div id="showNextGarment">
+              <img id="nextGarment"
+                src="https://www.pngfind.com/pngs/m/37-379385_open-arrow-right-icon-png-transparent-png.png"
+                style='height: 100%; width: 100%; object-fit: fill' alt="...">
+            </div>
           </div>
         </div>
       </div>
