Implement Garment Table and GarmentAll queries

--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -350,6 +350,15 @@
               style='height: 100%; width: 100%; object-fit: fill' alt="...">
           </div>
         </div>
+        <!-- Result table -->
+        <table style="border: 1px solid black width=100%">
+          <tr style="border: 1px solid black">
+            <th style="border: 1px solid black">Garment</th>
+            <th style="border: 1px solid black">Size</th>
+            <th style="border: 1px solid black">Amount</th>
+            <th style="border: 1px solid black">Cost</th>
+          </tr>
+        </table>
       </div>
 
       <!-- Submit and Reset Buttons -->
