--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -351,12 +351,20 @@
           </div>
         </div>
         <!-- Result table -->
-        <table style="border: 1px solid black width=100%">
+        <table style="border: 1px solid black width=100%" id="garmentTable">
           <tr style="border: 1px solid black">
             <th style="border: 1px solid black">Garment</th>
+            <th style="border: 1px solid black">Gender</th>
             <th style="border: 1px solid black">Size</th>
             <th style="border: 1px solid black">Amount</th>
             <th style="border: 1px solid black">Cost</th>
+          </tr>
+          <tr style="border: 1px solid black">
+            <td style="border: 1px solid black">1</th>
+            <td style="border: 1px solid black">Male</th>
+            <td style="border: 1px solid black">XS</th>
+            <td style="border: 1px solid black">5</th>
+            <td style="border: 1px solid black">999.99</th>
           </tr>
         </table>
       </div>
