Auto add/remote table rows

--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -359,12 +359,12 @@
             <th style="border: 1px solid black">Amount</th>
             <th style="border: 1px solid black">Cost</th>
           </tr>
-          <tr style="border: 1px solid black">
-            <td style="border: 1px solid black">1</th>
-            <td style="border: 1px solid black">Male</th>
-            <td style="border: 1px solid black">XS</th>
-            <td style="border: 1px solid black">5</th>
-            <td style="border: 1px solid black">999.99</th>
+          <tr>
+            <td>1</th>
+            <td>Male</th>
+            <td>XS</th>
+            <td>5</th>
+            <td>999.99</th>
           </tr>
         </table>
       </div>
