Populate Garment table based on database

--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -45,8 +45,8 @@
         </select>
       </div>
       <div id="showNumberOfGarment" class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 ">
-        <label class="form-label" for="numberOfGarments">Number Of Garments</label>
-        <input class="form-control border border-dark" type="text" name="numberOfGarments" id="numberOfGarments"
+        <label class="form-label" for="designNumberGarments">Number Of Garments</label>
+        <input class="form-control border border-dark" type="text" name="designNumberGarments" id="designNumberGarments"
           value="1" placeholder="example: 1">
       </div>
 
@@ -357,7 +357,7 @@
             <th style="border: 1px solid black">Gender</th>
             <th style="border: 1px solid black">Size</th>
             <th style="border: 1px solid black">Amount</th>
-            <th style="border: 1px solid black">Cost</th>
+            <th style="border: 1px solid black">Total</th>
           </tr>
           <tr>
             <td>1</th>
