Prevent enter key from submitting form

--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <form action="/designSubmit" method="post">
+  <form action="/designSubmit" method="post" id="designForm">
     <div class="container d-flex flex-column min-vh-100 justify-content-center align-items-center">
       <h1 class="display-4">Design Form</h1>
       <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 ">
