--- a/frontend/src/designForm/index.html
+++ b/frontend/src/designForm/index.html
@@ -394,6 +394,76 @@
 
     </div>
   </form>
+
+  <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 ">
+    <hr class="border border-primary border-3 opacity-75">
+  </div>
+
+  <nav class="navbar sticky-top bg-light py-3">
+    <div class="container-fluid">
+      <a class="navbar-toggler btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+        aria-controls="offcanvasNavbar" aria-label="Toggle navigation" role="button">
+        <span class="navbar-toggler-icon"></span>
+      </a>
+      <a class="navbar-brand justify-content-center" href="#"><img src="../assets/logoipsum-297.svg"></a>
+      <ul class="nav nav-tabs nav-fill">
+        <li class="nav-item">
+          <a class="nav-link active" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/order">Order</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/">Sales</a>
+        </li>
+      </ul>
+      <div class="offcanvas offcanvas-start" tabindex="0" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Orders</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Designs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Calendars</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Database</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Inventory</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Financials</a>
+            </li>
+          </ul>
+          <form class="d-flex mt-3" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container-fluid">
+    <div class="row align-items-center">
+      <div class="col-10 col-sm-8 col-md-7 col-lg-6 col-xl-5 col-xxl-4">
+        <div class="progress mt-5" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
+          aria-valuemin="0" aria-valuemax="100">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 </body>
 
 </html>
