--- a/frontend/src/orderForm/index.html
+++ b/frontend/src/orderForm/index.html
@@ -10,36 +10,38 @@
 
 <body>
   <div class="container-fluid">
-    <nav class="navbar bg-light fixed-top py-3">
+    <nav class="navbar sticky-top bg-light py-3">
       <div class="container-fluid">
         <a class="navbar-toggler btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
           aria-controls="offcanvasNavbar" aria-label="Toggle navigation" role="button">
           <span class="navbar-toggler-icon"></span>
         </a>
-        <a class="navbar-brand justify-content-center" href="#"><img src="../assets/logoipsum-297.svg"></a>
+        <div class="mx-auto">
+          <a class="navbar-brand" href="#"><img src="../assets/logoipsum-297.svg"></a>
+        </div>
         <ul class="nav nav-tabs nav-fill">
           <li class="nav-item">
-            <a class="nav-link active" href="/">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/order">Order</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/">Sales</a>
+            <a class="nav-link active" href="/order"> New Order</a>
           </li>
         </ul>
         <div class="offcanvas offcanvas-start" tabindex="0" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Navigation</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Orders</a>
+                <a class="nav-link" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Designs</a>
+                <a class="nav-link active" aria-current="page" href="/order">Orders</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/design">Designs</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Calendars</a>
@@ -54,10 +56,6 @@
                 <a class="nav-link" href="#">Financials</a>
               </li>
             </ul>
-            <form class="d-flex mt-3" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
           </div>
         </div>
       </div>
@@ -65,78 +63,79 @@
   </div>
 
   <div class="container-fluid">
-    <div class="row align-items-center">
-      <div class="progress mt-5" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
-        aria-valuemin="0" aria-valuemax="100">
-        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
+    <div class="row">
+      <div class=" col-11 col-lg-12 custombar mx-auto mt-5">
+        <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="33"
+          aria-valuemin="0" aria-valuemax="100">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 33%">33%</div>
+        </div>
       </div>
-      <form action="/orderSubmit" method="post">
-        <div class="d-flex flex-column justify-content-center align-items-center mt-5">
-          <h1 class="display-4">Order Form</h1>
-          <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 ">
-            <hr class="border border-primary border-3 opacity-75">
-          </div>
+    </div>
+    <form action="/orderSubmit" method="post">
+      <div class="d-flex flex-column justify-content-center align-items-center mx-auto mt-5 p-2" id="orderForm">
+        <h1 class="display-4">Order Form</h1>
+        <div class="col-11 col-lg-12 mx-auto mb-3 ">
+          <hr class="border border-primary border-3 opacity-75">
+        </div>
 
-          <div class="col-xl-5 col-lg-6 col-md-8 col-11">
-            <div class="row">
-              <div class="col-md-6 col-12 mb-3">
-                <label class="form-label" for="firstName">First Name</label>
-                <input class="form-control border border-dark" type="text" name="firstName" id="firstName">
-              </div>
-              <div class="col-md-6 col-12 mb-3">
-                <label class="form-label" for="lastName">Last Name</label>
-                <input class="form-control border border-dark" type="text" name="lastName" id="lastName">
-              </div>
+        <div class="col-11 col-lg-12 mx-auto">
+          <div class="row">
+            <div class="col-12 col-sm-6 mb-3">
+              <label class="form-label" for="firstName">First Name</label>
+              <input class="form-control border border-dark" type="text" name="firstName" id="firstName">
             </div>
-          </div>
-
-          <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 ">
-            <label class="form-label" for="organization">Organization</label>
-            <input class="form-control border border-dark" type="text" name="organization" id="organization"
-              placeholder="example: Claxton High School">
-          </div>
-
-          <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 ">
-            <label class="form-label" for="email">Email</label>
-            <input class="form-control border border-dark" type="email" name="email" id="email"
-              placeholder="coach.sport@chs.com">
-          </div>
-
-          <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3 ">
-            <label class="form-label" for="phone">Phone</label>
-            <input class="form-control border border-dark" type="tel" name="phone" id="phone"
-              placeholder="(987)654-3210">
-          </div>
-
-          <div class="col-xl-5 col-lg-6 col-md-8 col-11">
-            <div class="row">
-              <div class="col-md-5 col-12 mb-3">
-                <label class="form-label" for="requestedDeliveryDate">Due Date</label>
-                <input class="form-control border border-dark" type="date" name="requestedDeliveryDate"
-                  id="requestedDeliveryDate">
-              </div>
-              <div class="col-md-7 col-12 mb-3">
-                <label class="form-label" for="taxExemption">Tax-Exemption</label>
-                <input class="form-control border border-dark" type="text" name="taxExemption" id="taxExemption">
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xl-5 col-lg-6 col-md-8 col-11 mb-3">
-            <div class="d-flex flex-row-reverse">
-              <div class="col-md-3 col-6 ps-2">
-                <input class="form-control btn btn-primary" type="submit" value="Submit">
-              </div>
-              <div class="col-md-3 col-6 pe-2">
-                <button class="form-control btn btn-outline-secondary" id="submitButton" type="button">
-                  GetOrder
-                </button>
-              </div>
+            <div class="col-12 col-sm-6 mb-3">
+              <label class="form-label" for="lastName">Last Name</label>
+              <input class="form-control border border-dark" type="text" name="lastName" id="lastName">
             </div>
           </div>
         </div>
-      </form>
-    </div>
+
+        <div class="col-11 col-lg-12 mx-auto mb-3 ">
+          <label class="form-label" for="organization">Organization</label>
+          <input class="form-control border border-dark" type="text" name="organization" id="organization"
+            placeholder="example: Claxton High School">
+        </div>
+
+        <div class="col-11 col-lg-12 mx-auto mb-3 ">
+          <label class="form-label" for="email">Email</label>
+          <input class="form-control border border-dark" type="email" name="email" id="email"
+            placeholder="coach.sport@chs.com">
+        </div>
+
+        <div class="col-11 col-lg-12 mx-auto mb-3 ">
+          <label class="form-label" for="phone">Phone</label>
+          <input class="form-control border border-dark" type="tel" name="phone" id="phone" placeholder="(987)654-3210">
+        </div>
+
+        <div class="col-11 col-lg-12 mx-auto">
+          <div class="row">
+            <div class="col-12 col-sm-5 mb-3">
+              <label class="form-label" for="requestedDeliveryDate">Due Date</label>
+              <input class="form-control border border-dark" type="date" name="requestedDeliveryDate"
+                id="requestedDeliveryDate">
+            </div>
+            <div class="col-12 col-sm-7 mb-3">
+              <label class="form-label" for="taxExemption">Tax-Exemption</label>
+              <input class="form-control border border-dark" type="text" name="taxExemption" id="taxExemption">
+            </div>
+          </div>
+        </div>
+
+        <div class="col-11 col-lg-12 justify-content-end mb-3">
+          <div class="d-flex flex-row-reverse">
+            <div class="col-4 col-sm-3 ps-2">
+              <input class="form-control btn btn-primary" type="submit" value="Submit">
+            </div>
+            <div class="col-4 col-sm-3 pe-2">
+              <button class="form-control btn btn-outline-secondary" id="submitButton" type="button">
+                GetOrder
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
   </div>
 </body>
 
